--- a/newsdata/build.gradle
+++ b/newsdata/build.gradle
@@ -21,6 +21,8 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 }
