--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "NEWS_API_ENDPOINT", "\"http://nytimes.com/\""
+        }
+        debug {
+            buildConfigField "String", "NEWS_API_ENDPOINT", "\"http://nytimes.com/\""
         }
     }
 }
