--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -16,9 +18,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "NEWS_API_ENDPOINT", "\"http://nytimes.com/\""
+            buildConfigField "String", "NEWS_API_SERVICE_ENDOPINT", "\"http://api.nytimes.com\""
         }
         debug {
             buildConfigField "String", "NEWS_API_ENDPOINT", "\"http://nytimes.com/\""
+            buildConfigField "String", "NEWS_API_SERVICE_ENDOPINT", "\"http://api.nytimes.com\""
         }
     }
 }
@@ -34,4 +38,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jpardogo.googleprogressbar:library:1.2.0'
+    apt "com.google.dagger:dagger-compiler:2.5"
+    compile "com.google.dagger:dagger:2.5"
+    provided "javax.annotation:jsr250-api:1.0"
 }
