--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,20 +33,25 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jpardogo.googleprogressbar:library:1.2.0'
-    apt "com.google.dagger:dagger-compiler:2.5"
     compile "com.google.dagger:dagger:2.5"
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:1.2.1'
     provided "javax.annotation:jsr250-api:1.0"
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    apt "com.google.dagger:dagger-compiler:2.5"
+
 }
